# Yt_Flow

./: .gitignore  README.md  config.py  index.html  install.sh  main.py  pyproject.toml  server.py  youtube.py
Api/: main.py
Web/: index.html  script.js  style.css
wave_twinx/: __main__.py  config.py  main.py  server.py  youtube.py
wave_twinx/Web/: index.html  style.css
